# iam-governance-plugin

./: Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json
programs/iam-voter-weight/: Cargo.toml
programs/iam-voter-weight/src/: error.rs  governance.rs  lib.rs
programs/iam-voter-weight/src/instructions/: close_registrar.rs  close_voter_weight_record.rs  create_max_voter_weight_record.rs  create_registrar.rs  create_voter_weight_record.rs  mod.rs  update_max_voter_weight_record.rs  update_registrar.rs  update_voter_weight_record.rs
programs/iam-voter-weight/src/state/: mod.rs  registrar.rs
scripts/: generate-test-fixtures.ts  test-devnet.ts
tests/: helpers.ts  iam-voter-weight-integration.ts  iam-voter-weight.ts
tests/fixtures/: identity-state-a.json  identity-state-b.json
