[package]
name = "iam-voter-weight"
version = "0.1.0"
description = "SPL Governance voter weight plugin for IAM Protocol human verification"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "iam_voter_weight"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
spl-governance = { workspace = true }
spl-governance-addin-api = { workspace = true }
borsh_1 = { workspace = true }
solana-program = { workspace = true }
